src/www/css/site.css
html {
  scroll-behavior: smooth;
}

body {
  background-color: #fef3ea;
  margin: 0;
}

body,
input,
button,
textarea {
  font-family: Raleway, sans-serif;
  font-size: 1.2rem;
  line-height: 1.5em;
}

#about-us {
  text-align: justify;
}

#header,
h1,
h2,
h3,
h4 {
  font-family: Cinzel, serif;
}

h1 {
  font-size: 4em;
  text-align: center;

  /*
        font-family: 'Apple Chancery', cursive;
        font-family: "Hurricane", cursive;
        */

  /*
        font-family: "Oooh Baby", cursive;
        */
  font-family: Carattere, cursive;
  color: #ff0f91;
  text-shadow: black 2px 2px 2px;
}

h2 {
  /* Nice but can't read FAQ */
  font-family: Carattere, cursive;
  font-size: 3em;
  text-align: center;
  color: #ff0f91;
  text-shadow: black 2px 2px 2px;
}

#outer {
  margin: auto;
  text-align: center;
}

#container {
  min-width: 300px;
  max-width: 720px;
  color: #4e2e14;
  font-weight: 400;

  /* padding: 1em; */
  margin: 1em;
  text-align: center;
  display: inline-block;
}

.and {
  font-size: 2em;
  color: #ff0f91;
  font-family: Carattere, cursive;
  font-weight: 800;
  position: relative;
  top: 0.15em;
  text-shadow: black 1px 0 1px;
}

#rsvp h1,
#faq h1 {
  /* Different font, because FAQ doesn't look good in the regular font */
  font-family: cursive;
  font-size: 3.5em;
}

.flip {
  transform: scaleX(-1);
}

.right-align {
  text-align: right;
}

#header {
  position: fixed;

  /* Sit on top of the page content */
  margin: auto;
  top: 0;
  width: 100%;

  /* height: 3em; */
  background-color: #fef3ea;
  border: rgb(229 231 235);
  box-shadow: -2px 4px 12px #00000026;
}

#logo {
  float: left;
  display: flex;
  justify-content: left;
}

#nav {
  float: right;
  display: flex;
  justify-content: right;
}

#header ul {
  display: flex;
  list-style: none;
  margin: 10px;
  padding-left: 0;
}

#header li {
  margin-left: 10px;
  margin-right: 10px;
}

section {
  /* Ensure there is space for the nav bar */
  scroll-margin-top: 5em;
  scroll-snap-margin-top: 5em;

  /* iOS 11 and older */

  margin-top: 4em;
  padding-bottom: 1em;
  border-bottom: 1px solid #4e2e1430;
}

@media (width <= 720px) {
  section {
    /* Ensure there is space for the nav bar */
    scroll-margin-top: 8em;
    scroll-snap-margin-top: 8em;
  }

  #container {
    margin-top: 4em;
  }

  #logo {
    float: unset;
    justify-content: center;
  }

  #nav {
    float: unset;
    justify-content: center;
  }
}

a {
  color: inherit;
  text-decoration: underline #4e2e1480;
}

a:hover {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: hotpink;
}

/* Fancy Underline links taken from
       * https://css-irl.info/animating-underlines/
       */

/* Underline styles */
#header a {
  display: block;
  position: relative;
  text-decoration: none;
}

#header a:hover {
  text-decoration: none;
}

/* Define a underline element */
#header a::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0.1em;
  background-color: hotpink;
  opacity: 0;
  transition:
    opacity 300ms,
    transform 300ms;
  overflow: hidden;

  /* Fade in/out */

  /* opacity: 0; */

  /* Expand the underline from the center */
  transform: scale(0);
  transform-origin: center;
}

/* On devices (with mouse cursor, not touch screens) enable hover effects */
@media (hover: hover) {
  #header a:hover::after {
    /* Fade in/out */
    opacity: 1;

    /* Expand */
    transform: scale(1);
  }
}

#header a.active::after {
  /* Fade in/out */
  opacity: 1;

  /* Expand */
  transform: scale(1);
}

.peacock1 {
  position: fixed;

  /* Sit on top of the page content */

  /*
        float:right;
        right: 0;
        */

  bottom: 0;
  height: 50%;
  z-index: -1;
}

.peacock2 {
  position: fixed;

  /* Sit on top of the page content */
  float: left;
  left: 0;
  top: 0;
  height: 50%;
  z-index: -1;
}

@media (width <= 1000px) {
  .peacock1 {
    position: unset;
    width: 100%;
  }
}

#schedule .map iframe {
  box-shadow: -2px 4px 12px #00000026;
  min-width: min(400px, 100%);
  max-width: 400px;
  height: 300px;
  border: 0;
}

#schedule .definition {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-gap: 1em;
  margin-top: 2em;
  margin-bottom: 2em;
}

@media (width <= 720px) {
  #schedule .definition {
    grid-template-columns: 1fr 3fr;
  }
}

#schedule .definition .title {
  text-align: right;
  font-weight: bold;
}

#schedule .definition .body {
  text-align: center;
}

#faq .emojii {
  font-size: 2em;
  vertical-align: middle;
}

#faq ul {
  list-style-type: none;
  padding-left: 0;
}

#faq li {
  margin-top: 3em;
  margin-bottom: 3em;
}

#footer {
  text-align: center;
}

.hide {
  display: none;
}

/* Hide RSVP if not invited */
.hide-rsvp {
  display: none;
}

/* Hide the ceremony if not invited */
.hide-ceremony {
  display: none;
}

@media (width <= 600px) {
  .hide-mobile {
    display: none;
  }
}

.error {
  font-weight: bold;
  color: red;
}

.success {
  font-weight: bold;
  color: red;
}

.loading {
  font-weight: bold;
  color: red;
}

.fancy-border {
  border-image: url("/images/border-rsvp.svg") round;
  border-image-slice: 33%;
  border-image-width: 10rem;
  border-image-repeat: stretch;
  background-color: #fef3ea;
  padding: 1em;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

#rsvp-form {
  margin: auto;
}

#rsvp {
  text-align: center;
}

#rsvp table {
  width: 100%;
}

#rsvp table,
tr,
th,
td {
  border-spacing: 10px;

  padding-left: 1em;
  padding-right: 1em;
}

#rsvp ul {
  padding: 0;
  list-style-type: none;
}

#rsvp ul ul {
  padding: 0.5em;
  padding-left: 1em;
}

input.rsvp_name,
input.rsvp_email,
input.rsvp_phone {
  width: 17em;
}

.guest-row {
  display: grid;
  grid-template-columns: 110px auto auto auto;
  grid-template-rows: 1fr 1fr 1fr 10px;
  gap: 5px 0;
  align-items: center;
}

/* left */
.div1 {
  grid-area: 1 / 1 / 4 / 2;
}

/* right */
.div2 {
  grid-area: 1 / 4 / 4 / 5;
  text-align: left;
}

/* middle */
.div3 {
  grid-area: 1 / 2 / 2 / 3;
}
.div4 {
  grid-area: 1 / 3 / 2 / 4;
}

.div5 {
  grid-area: 2 / 2 / 3 / 3;
}
.div6 {
  grid-area: 2 / 3 / 3 / 4;
}

.div7 {
  grid-area: 3 / 2 / 4 / 3;
}
.div8 {
  grid-area: 3 / 3 / 4 / 4;
}

/* hr */
.div9 {
  grid-area: 4 / 1 / 5 / 5;
}

.row-label::after {
  /* add new line */
  content: "";
  display: block;
}

@media (width <= 720px) {
  input.rsvp_name,
  input.rsvp_email,
  input.rsvp_phone {
    width: 12em;
  }

  .guest-row {
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: 1fr 1fr 1fr 1fr auto 10px;
    grid-gap: 0 0.5em;
  }

  .div1 {
    grid-area: 1 / 1 / 2 / 3;
  }

  .div2 {
    grid-area: 5 / 1 / 6 / 3;
    margin: auto;
  }
  .div3 {
    grid-area: 2 / 1 / 3 / 2;
  }
  .div4 {
    grid-area: 2 / 2 / 3 / 3;
  }
  .div5 {
    grid-area: 3 / 1 / 4 / 2;
  }
  .div6 {
    grid-area: 3 / 2 / 4 / 3;
  }
  .div7 {
    grid-area: 4 / 1 / 5 / 2;
  }
  .div8 {
    grid-area: 4 / 2 / 5 / 3;
  }
  .div9 {
    grid-area: 6 / 1 / 7 / 3;
  }

  .row-label {
    font-weight: bold;
  }

  .row-label::after {
    content: none;
  }
}

#add-row-button {
  margin: 1em;
  margin-right: 5%; /* 5% to align with text box below that is 90% wide) */
}

label {
  display: inline-block;
}

input,
textarea {
  color: #4e2e14;
  border: 1px solid #4e2e14;
  border-radius: 4px;
  text-align: center;
}

textarea {
  width: 90%;
}

button,
input[type="submit"] {
  color: #4e2e14;
  border: 1px solid #4e2e14;
  border-radius: 8px;
  padding: 0.5rem 1rem;
  font-size: 1.25rem;
  box-shadow:
    0 8px 16px 0 rgb(0 0 0 / 20%),
    0 6px 20px 0 rgb(0 0 0 / 19%);
  cursor: pointer;
}

.transition-hide {
  transition: all 0.5s;
  opacity: 0;
  transform: scaleY(0);
  transform-origin: top;
}

.lds-heart {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
  transform: rotate(45deg);
  transform-origin: 40px 40px;
}

.lds-heart div {
  top: 32px;
  left: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  background: red;
  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
}

.lds-heart div::after,
.lds-heart div::before {
  content: " ";
  position: absolute;
  display: block;
  width: 32px;
  height: 32px;
  background: red;
}

.lds-heart div::before {
  left: -24px;
  border-radius: 50% 0 0 50%;
}

.lds-heart div::after {
  top: -24px;
  border-radius: 50% 50% 0 0;
}

@keyframes lds-heart {
  0% {
    transform: scale(0.95);
  }

  5% {
    transform: scale(1.1);
  }

  39% {
    transform: scale(0.85);
  }

  45% {
    transform: scale(1);
  }

  60% {
    transform: scale(0.95);
  }

  100% {
    transform: scale(0.9);
  }
}

.image-cropper {
  margin: 1em;
  width: 200px;
  height: 200px;
  overflow: hidden;
  border-radius: 50%;
}

.image-cropper img {
  display: inline;
  margin: 0 auto;
  height: 100%;
  width: auto;
}

#about-us .grid {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: 1fr;
  grid-gap: 0;
  align-items: center;
}

#about-us .image-left {
  grid-area: 1 / 1 / 2 / 2;
}

#about-us .text-right {
  grid-area: 1 / 2 / 2 / 3;
}

#about-us .text-left {
  grid-area: 1 / 1 / 2 / 2;
}

#about-us .image-right {
  grid-area: 1 / 2 / 2 / 3;
}

@media (width <= 720px) {
  #about-us .grid {
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
    justify-items: center;
  }

  #about-us .image-left {
    grid-area: 1 / 1 / 2 / 2;
  }

  #about-us .text-right {
    grid-area: 2 / 1 / 3 / 2;
  }

  #about-us .text-left {
    grid-area: 2 / 1 / 3 / 2;
  }

  #about-us .image-right {
    grid-area: 1 / 1 / 2 / 2;
  }
}


.splide__slide img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  object-position: center;

  /* you need to match the shadow color to your background or image border for the desired effect*/
  filter: drop-shadow(0 0 3px #00000026) drop-shadow(0 0 3px #00000026);
}

#registry ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin-block-start: 0;
  padding-inline-start: 0;
}

@media (width <= 720px) {
  #registry ul {
    grid-template-columns: 1fr;
    padding: 1em;
  }
}


#registry a {
  text-decoration: none;
}
#registry li {
  display: inline-block;
  text-align: center;
  list-style: none;
  padding: 1em;
  padding-bottom: 0.5em;
}

#registry li img {
  width: 100%;
}

#registry li:hover {
  background-color: #ff69b480;
}

#registry p.description {
  font-size: 0.9em;
  margin-block-start: 0.5em;
  margin-block-end: 0;
  text-decoration: none;
}

